--- a/security.html
+++ b/security.html
@@ -53,7 +53,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/crowdstrike/job/oVQCafwh'>CrowdStrike Careers - Security Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/crowdstrike/job/oVQCafwh'>CrowdStrike Careers - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -69,7 +69,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/shulmanfleming/job/1cyaftceqe6wmxu18gobqzhnwe'>Application Security Engineer | Shulman Fleming &amp; Partners</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692216110-security-engineer'>Anitian  Security Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692216110-security-engineer'>Anitian  Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -260,7 +260,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/4tryot1s1dtudztboke6nxntkw'>Security Architect  | JFR Staffing</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/4tryot1s1dtudztboke6nxntkw'>Security Architect  | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -392,7 +392,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/mattermost/339a5767-ccff-46e1-ae91-a0de20b39d0b'>Mattermost - Security Engineer, Infrastructure &amp; Operations (Remote)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/339a5767-ccff-46e1-ae91-a0de20b39d0b'>Mattermost - Security Engineer, Infrastructure &amp; Operations (Remote)</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
